# FisherMan

./: .gitignore  README.md  pyproject.toml  vercel.json
api/: web.py
samples/: phishing.eml
src/fisherman/: __init__.py  cli.py  detector.py  web.py
tests/: test_detector.py  test_vercel.py  test_web.py
